--- a/styles.css
+++ b/styles.css
@@ -7,9 +7,9 @@
 
 
 li, a, button {
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-weight: 400;   
-    font-size: 16px;
+    font-size: 18px;
     color: grey;
     text-decoration: none;
 
@@ -22,24 +22,85 @@ header {
 
 
 }
-.links_navegacion {
+#header_link{
+    background-color: #DAF7A6;
+    height: 50px;
+    width: 195px;
+    padding: 15px;
+    border-radius: 10px;
+}
+#pre_inicio{
+    background-color: white;
+    height: 55px;
+    width: 5px;
+    margin: 0px;
+}
+a.inicio_header {
+    background-color: transparent;
+}
+a.inicio_header > button {
+    background-color: lightgreen;
+    padding: 9px 9px;
+    border-radius: 9px;
+    border: none;
+    color: white;
+    font-size: 25px;
+}
+a.inicio_header:hover > button {
+    color: white;
+    background-color: rgb(120, 221, 120);
+}
+a.cta {
+    background-color: transparent;
+}
+a.cta:hover > button {
+    color: white;
+    
+
+}
+#links_nav {
+    background-color: transparent;
+}
+.links_navegacion{
+    background-color: transparent;
+}
+.links_navegacion > li{
     list-style: none;
+    background-color: white;
+    padding: 9px;
+    border-radius: 50px;
+    border: none;
+    
 }
 
 .links_navegacion li {
     display: inline-block;
-    padding: 0px 20px;
+    padding: 10px 20px;
+    padding-right: 40px;
+    margin-left: 90px;
 }
 
 .links_navegacion li a {
     transition: all 0.3s ease 0s;
+    background-color: transparent;
+}
+.links_navegacion li a > img{
+    opacity: 0;
+    background-color: transparent;
+    position:relative;
+    top:3px;
+    left:-3px;
+}
+.links_navegacion li a:hover > img{
+    transition: all 0.3s ease 0s;
+    opacity: 1;
 }
 .links_navegacion li a:hover {
-    color: #0088a9;
+    color: black;
 }
 .links_navegacion .special_li li {
     padding: 9px 25px;
-    background-color: #1D8348;
+    background-color: #26b361;
     border: none;
     border-radius: 50px;
     cursor: pointer;
@@ -47,16 +108,22 @@ header {
 
 
 }
-button {
+header.header_class {
+    background-color: lightgreen;
+}
+hr.hr_header{
+    border: 2px solid rgb(110, 180, 110);
+}
+a.cta > button{
     color:#3A403A;
     padding: 9px 25px;
-    background-color: #DAF7A6;
+    background-color: white;
     border: none;
     border-radius: 50px;
     cursor: pointer;
     transition: all 0.3s ease 0s;
 
 }
-button:hover {
+a.cta > button:hover {
     background-color: #28B463;
 }
