algo de responsive

--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,46 @@
+
+:root {
+    --verde-liviano: #28B463;
+    --verde-acentuado-contactame: #1D8348;
+    --verde-acentuado-nombre:white;
+}
 * {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
     background-color: white;
 }
+@media (max-width: 800px){
+    #preguntas {
+        visibility: hidden;
+        position: absolute;
+    }
+}
+@media (max-width: 615px){
+    #nombre {
+        visibility: hidden;
+        position: absolute;
+    }
+    .inicio_header > img {
+        bottom: 200px;
+    }
 
-
+}
+.preguntas {
+    margin: 2%;
+}
+.preguntas > ol {
+    margin: 2%;
+}
+.preguntas > ol > li {
+    margin: 2%;
+}
+h1 {
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-weight: 400;   
+    color: #3A403A;
+    text-decoration: none;
+}
 li, a, button {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-weight: 400;   
@@ -18,28 +53,21 @@ header {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 30px 10%;
+    padding: 30px 2%;
 
 
 }
-#header_link{
-    background-color: #DAF7A6;
-    height: 50px;
-    width: 195px;
-    padding: 15px;
-    border-radius: 10px;
-}
-#pre_inicio{
-    background-color: white;
-    height: 55px;
-    width: 5px;
-    margin: 0px;
+.inicio_header > img {
+    background-color: transparent;
+    position: relative;
+    top: 30px;
 }
 a.inicio_header {
     background-color: transparent;
 }
 a.inicio_header > button {
-    background-color: #90ee90;
+    background-color: var(--verde-liviano);
+    transition: all 0.3s ease 0s;
     padding: 9px 9px;
     border-radius: 9px;
     border: none;
@@ -48,7 +76,7 @@ a.inicio_header > button {
 }
 a.inicio_header:hover > button {
     color: white;
-    background-color: rgb(120, 221, 120);
+    background-image: linear-gradient(to bottom right, var(--verde-liviano), var(--verde-acentuado-contactame))
 }
 a.cta {
     background-color: transparent;
@@ -67,19 +95,13 @@ a.cta:hover > button {
 .links_navegacion > li{
     list-style: none;
     background-color: white;
-    padding: 9px;
     border-radius: 50px;
     border: none;
+    display: inline-block;
+    padding: 9px 30px 9px 10px;
+    margin-left: 10px;
     
 }
-
-.links_navegacion li {
-    display: inline-block;
-    padding: 10px 20px;
-    padding-right: 40px;
-    margin-left: 90px;
-}
-
 .links_navegacion li a {
     transition: all 0.3s ease 0s;
     background-color: transparent;
@@ -98,18 +120,12 @@ a.cta:hover > button {
 .links_navegacion li a:hover {
     color: black;
 }
-.links_navegacion .special_li li {
-    padding: 9px 25px;
-    background-color: #26b361;
-    border: none;
-    border-radius: 50px;
-    cursor: pointer;
-    transition: all 0.3s ease 0s;
 
-
+#l1 {
+    margin-left: 10px;
 }
 header.header_class {
-    background-color: #90ee90;
+    background-color: var(--verde-liviano);
 }
 hr.hr_header{
     border: 2px solid rgb(110, 180, 110);
@@ -125,5 +141,5 @@ a.cta > button{
 
 }
 a.cta > button:hover {
-    background-color: #28B463;
+    background-color: var(--verde-acentuado-contactame);
 }
